# rk_benchmark

./: CMakeLists.txt  EXTRA.md  README.md  dlopen_iface.c  euler_benchmark.f90  rk23_cptr_external.c  rk_benchmark.F90  rk_benchmark.f90  rk_c_solver.f90  rk_forward_euler.f90  rk_solvers.f90  rk_types.f90  robertson_models.f90  robertson_plugin.f90  robertson_rk23.py
build-c/: CMakeCache.txt  Makefile  cmake_install.cmake  rk_benchmark  rk_types.mod  robertson_models.mod
scripts/: extract_mean_time_per_step.awk  plot_mean_time_per_step.gp  plot_mean_time_per_step.py  robertson_diffrax.py  robertson_rk23.jl  robertson_rk23.py
src/: euler_benchmark.f90  rd_benchmark.F90  reaction_diffusion_models.f90  rk23_cptr_external.c  rk_benchmark.F90  rk_kinds.f90  rk_solvers.f90  rk_types.f90
